{
    "version": 1,
    "name": "InputControls",
    "maps": [
        {
            "name": "playerNormal",
            "id": "3e9e6fc8-4214-4fc8-838c-a091120bc3cb",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d56be9ce-7bfd-4875-8ad8-f979ef7451c7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveHorizontal",
                    "type": "Button",
                    "id": "65ae8c93-e50d-4221-9a55-627c36c3fa91",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveVertical",
                    "type": "Button",
                    "id": "5134f007-3902-449f-a37e-adb0f27eac08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f212d3c8-8e80-4dc7-a66e-d250481500ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b02e0b1e-d8d6-48f1-8308-7491be2a588b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "key board - Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "horizontal keyboard",
                    "id": "822391b3-c68b-4b71-97da-479349f75a31",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ac325ac1-f7fa-4359-9032-a3a721711841",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "key board - Mouse",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "49dda3df-3d47-4774-81da-63c9c9b74959",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "key board - Mouse",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "vertical keyboard",
                    "id": "1f8ecae7-d03e-46a6-913f-5b982b7ba9c5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9e1fc1e2-521b-4458-9bc7-6fa30d9e19e3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "key board - Mouse",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "404d0541-009b-4e14-9721-b147b2e37d17",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "key board - Mouse",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3d304d1a-567d-4f17-89c8-e7ebaeeeec0a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "key board - Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "playerFlying",
            "id": "7e26adb1-493c-425a-b691-b195f695795b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "531810e0-4a22-44af-bb17-b3ef48653873",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "200363a8-01f5-49eb-a994-f403936bf474",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "key board - Mouse",
            "bindingGroup": "key board - Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}