using UnityEngine;

public static class GameConstants
{
    public const string PLAYER_ANIM_PARAM_SPEED_X = "xSpeed";
    public const string PLAYER_ANIM_PARAM_SPEED_y = "ySpeed";
    public const string PLAYER_ANIM_PARAM_IS_GROUNDED = "isGrounded";
    public const string PLAYER_ANIM_PARAM_ATTACK = "Attack";
}
